// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Header Component > should render the Header component correctly 1`] = `
<div>
  <div>
    <button
      data-testid="connect-test-button"
    />
  </div>
  <div
    align="start"
    class="sc-blHHSb jWUilC"
    position="left"
    spacing="0"
    style="width: 100vw;"
  >
    <header
      class="sc-dqCRwF iTnpec"
    >
      <img
        class="sc-eXvyUU fTMtiV"
        src="/src/assets/icons/logo-dark.svg"
      />
    </header>
    <nav
      class="sc-klYcpz eBOjiM"
    >
      <a
        class="sc-DvaoS khPjbb"
        href="/dashboard"
      >
        Dashboard
      </a>
      <a
        class="sc-DvaoS khPjbb"
        href="/exchange"
      >
        Exchange
      </a>
      <a
        class="sc-DvaoS khPjbb"
        href="/dashboard/faucet"
      >
        Faucet
      </a>
      <a
        class="sc-DvaoS khPjbb"
        href="https://station.non-prod.sphx.dev"
        target="_blank"
      >
        Station
      </a>
      <a
        class="sc-DvaoS khPjbb"
        href="https://explorer.sphx.dev"
        target="_blank"
      >
        Explorer
      </a>
      <button
        class="sc-fAUdSK dztAJe"
        variant="secondary"
      >
        Add Chain
      </button>
      <span
        class="sc-dntaoT hkozYz"
      >
        <button
          class="sc-fAUdSK lchHyL"
          variant="primary"
        >
          Connect
        </button>
      </span>
    </nav>
  </div>
  <div
    id="modal-root"
  />
</div>
`;

exports[`Header Component > should render the Nav component 1`] = `
<nav
  class="sc-klYcpz eBOjiM"
>
  <a
    class="sc-DvaoS khPjbb"
    href="/dashboard"
  >
    Dashboard
  </a>
  <a
    class="sc-DvaoS khPjbb"
    href="/exchange"
  >
    Exchange
  </a>
  <a
    class="sc-DvaoS khPjbb"
    href="/dashboard/faucet"
  >
    Faucet
  </a>
  <a
    class="sc-DvaoS khPjbb"
    href="https://station.non-prod.sphx.dev"
    target="_blank"
  >
    Station
  </a>
  <a
    class="sc-DvaoS khPjbb"
    href="https://explorer.sphx.dev"
    target="_blank"
  >
    Explorer
  </a>
  <button
    class="sc-fAUdSK dztAJe"
    variant="secondary"
  >
    Add Chain
  </button>
  <span
    class="sc-dntaoT hkozYz"
  >
    <button
      class="sc-fAUdSK lchHyL"
      variant="primary"
    >
      Connect
    </button>
  </span>
</nav>
`;
